[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lnp-benchmark-suite"
version = "0.1.0"
description = "Study-aware benchmark for LNP transfection prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
lnp-bench = "lnpbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
